Arrelando split y lista

--- a/TestProgrammer.App/TestProgrammer.App/Views/EmployeesPage.xaml
+++ b/TestProgrammer.App/TestProgrammer.App/Views/EmployeesPage.xaml
@@ -4,119 +4,149 @@
              x:Class="TestProgrammer.App.Views.EmployeesPage"
              BindingContext="{Binding Main, Source={StaticResource Locator}}">
     <ContentPage.Content>
-        <StackLayout>
-            <StackLayout >
-                <Label FontAttributes="Bold"
-                       FontSize="Title" 
-                       Text="Split Mount"/>
-                <StackLayout Orientation="Horizontal"
-                         HorizontalOptions="CenterAndExpand">
-                    <Label Text="Amount to split: "
-                       TextColor="Black"
-                       VerticalOptions="Center"/>
-                    <Entry BackgroundColor="White"
-                       Text="{Binding Dividendo, Mode=TwoWay}"
-                       TextColor="White"
-                       VerticalOptions="Center"/>
-                </StackLayout>
-                <Grid BackgroundColor="#0389ff"
-                  HorizontalOptions="CenterAndExpand"
-                  Margin="20,10"
-                  Padding="10, 7">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="50"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Button BackgroundColor="#0389ff"
-                        FontAttributes="Bold"
-                        FontSize="Title"
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        Text="-"
-                        TextColor="White"/>
-                    <Entry BackgroundColor="White" 
-                           Grid.Row="0"
-                           Grid.Column="1"
-                           Text="{Binding Divisor, Mode=TwoWay}"  />
-                    <Button BackgroundColor="#0389ff"
-                            FontAttributes="Bold"
-                            FontSize="Title"
-                            Grid.Row="0"
-                            Grid.Column="2"
-                            Text="+"
-                            TextColor="White"/>
-                    <Entry HorizontalOptions="Center"   
-                           Grid.Row="1"
+        <ScrollView >
+            <StackLayout>
+                <StackLayout BindingContext="{Binding Split}">
+                    <Label FontAttributes="Bold"
+                           FontSize="Title" 
+                           Text="Split Mount"/>
+                    <StackLayout Orientation="Horizontal"
+                                 HorizontalOptions="Center">
+                        <Label Text="Amount to split: "
+                               TextColor="Black"
+                               VerticalOptions="Center"/>
+                        <Entry BackgroundColor="White"
+                           Keyboard="Numeric"
+                           Text="{Binding Dividendo, Mode=TwoWay}"
+                           TextColor="Black"
+                           VerticalOptions="Center"
+                           WidthRequest="50"/>
+                    </StackLayout>
+                    <Grid BackgroundColor="#0389ff"
+                          HorizontalOptions="CenterAndExpand"
+                          Margin="20,10"
+                          Padding="20,10">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="40"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Button BackgroundColor="#0389ff"
+                                FontAttributes="Bold"
+                                FontSize="Title"
+                                Grid.Row="0"
+                                Grid.Column="0"
+                                Text="-"
+                                TextColor="White"/>
+                        <Entry BackgroundColor="White" 
+                               Grid.Row="0"
+                               Grid.Column="1"
+                               Keyboard="Numeric"
+                               Text="{Binding Divisor, Mode=TwoWay}"  
+                               TextColor="Black"/>
+                        <Button BackgroundColor="#0389ff"
+                                FontAttributes="Bold"
+                                FontSize="Title"
+                                Grid.Row="0"
+                                Grid.Column="2"
+                                Text="+"
+                                TextColor="White"/>
+                        <Entry Grid.Row="1"
                            Grid.Column="0"
                            Grid.ColumnSpan="3"
+                           HorizontalOptions="Center"
+                           Placeholder="$  0.0"
+                           PlaceholderColor="Black"
                            Text="{Binding Resultado, StringFormat='$ {0}', Mode=TwoWay}"
-                           TextColor="White"/>
-                </Grid>
+                           TextColor="Black"
+                           WidthRequest="50"/>
+                    </Grid>
 
-            </StackLayout>
+                </StackLayout>
 
-            <StackLayout BindingContext="{Binding Employees}"
-                         Padding="5,10">
-                <Label FontAttributes="Bold"
+                <StackLayout BindingContext="{Binding Employees}"
+                             BackgroundColor="White"
+                             Margin="10">
+                    <Label FontAttributes="Bold"
                        FontSize="Title"
                        Text="List Employees"/>
-                <Grid BackgroundColor="GreenYellow" RowSpacing="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Label FontAttributes="Bold"
-                           Text="ID"
-                           Grid.Column="0"/>
-                    <Label FontAttributes="Bold"
-                           Text="Name"
-                           Grid.Column="1"/>
-                    <Label FontAttributes="Bold"
-                           Text="Position"
-                           Grid.Column="2"/>
-                    <Label FontAttributes="Bold"
-                           Text="Profile"
-                           Grid.Column="3"/>
-                </Grid>
-                <ListView Grid.Row="1"
-                          HasUnevenRows="True"
-                           IsRefreshing="{Binding IsRefreshing}"
-                            ItemsSource="{Binding Employees}">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <ViewCell>
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*"/>
-                                    </Grid.RowDefinitions>
-                                    <Label Grid.Column="0"
-                                               Text="{Binding EmployeeID}"/>
-                                    <Label Grid.Column="1"
-                                               Text="{Binding EmployeeName}"/>
-                                    <Label Grid.Column="2"
-                                               Text="{Binding PositionID}"/>
-                                    <Label Grid.Column="3"
-                                               Text="{Binding ProfileID}"/>
-                                </Grid>
-                            </ViewCell>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
+                    <Grid BackgroundColor="GreenYellow"
+                          ColumnSpacing="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Label FontAttributes="Bold"
+                               HorizontalOptions="Center"  
+                               HeightRequest="20"
+                               Text="ID"
+                               TextColor="White"
+                               Grid.Column="0"
+                               Grid.Row="0"
+                               VerticalOptions="Center"
+                           />
+                        <Label FontAttributes="Bold"
+                               HorizontalOptions="Center"
+                               HeightRequest="20"
+                               Text="Name"
+                               TextColor="White"
+                               Grid.Column="1" Grid.Row="0"
+                               VerticalOptions="Center"/>
+                        <Label FontAttributes="Bold"
+                               HorizontalOptions="Center"
+                               HeightRequest="20"
+                               Text="Position"
+                               TextColor="White"
+                               Grid.Column="2" Grid.Row="0"
+                               VerticalOptions="Center"/>
+                        <Label FontAttributes="Bold"
+                               HorizontalOptions="Center"
+                               HeightRequest="20"
+                               Text="Profile"
+                               TextColor="White"
+                               Grid.Column="3" Grid.Row="0"
+                               VerticalOptions="Center"/>
 
+                    </Grid>
+                    <ListView HasUnevenRows="True"
+                          IsRefreshing="{Binding IsRefreshing}"
+                          ItemsSource="{Binding Employees}">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <ViewCell>
+                                    <Grid >
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="*"/>
+                                        </Grid.ColumnDefinitions>
+
+                                        <Label Grid.Column="0"
+                                           HorizontalOptions="Center"
+                                           Text="{Binding EmployeeID}"/>
+                                        <Label Grid.Column="1"
+                                           HorizontalOptions="Center"
+                                           Text="{Binding EmployeeName}"/>
+                                        <Label Grid.Column="2"
+                                           HorizontalOptions="Center"
+                                           Text="{Binding PositionID}"/>
+                                        <Label Grid.Column="3"
+                                           HorizontalOptions="Center"
+                                           Text="{Binding ProfileID}"/>
+                                    </Grid>
+                                </ViewCell>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </StackLayout>
             </StackLayout>
-        </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
